--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "nodejs ./tasks/jenkins-build.js",
-    "clean": "rm -Rf errorShots && rm -Rf results && rm -Rf test_report && rm -Rf builds_output && rm -f custom_report.json"
+    "clean": "rm -Rf errorShots && rm -Rf results && rm -Rf test_report && rm -Rf builds_output && rm -f custom_report.json && rm -f build_summary.json"
   },
   "author": "",
   "license": "ISC",
